# clipper-python

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bundle_builder.py  bundle_info.xml  clipper.i  test_clipper.py  test_cpatterson.py  test_minimol.py  test_orth_frac.py
clipper-utils/io/: molecules.py
clipper_tools/: __init__.py
clipper_tools/em/: cut_density.py  structure_factors.py
clipper_tools/io/: __init__.py  map_coefficients.py  maps.py  molecules.py  structure_factors.py
clipper_tools/xray/: __init__.py  coordinate_kicks.py  map_coefficients.py  mr_from_em.py  patterson.py  structure_factors.py
src/: __init__.py  atoms.i  clipper.i  clipper_python_core.i  coords.i  hkl_datatypes.i  libfftw2xc.dylib  maps.i  symop_arrays.i  unit_cell.i
unittests/: task.tsk  test_clipper-python.py  test_clipper_numpy.py  test_em_mtz.py  test_example.py  test_minimol.py  test_orth_frac.py  test_python_clipper.py  test_read_map.py  test_tools_coordinate_kicks.py  test_tools_mr_from_em.py
unittests/test_data/: 4x1v.cif  4x1v.mtz  4x1v_best.map  starting_map.mtz
